# can_ros_driver

./: CMakeLists.txt  LICENSE  package.xml  readme.md  setup.py
config/: params.yaml
dbc/: can_db.dbc
launch/: can_ros_driver.launch
msg/: OBSTACLE_DETECTION.msg  VEHICLE_CONTROL.msg  VEHICLE_STATUS.msg
scripts/: start_vcan.sh  stop_vcan.sh  update_can_msgs.py
src/: can_ros_driver_node.py
src/can_ros_driver/: can_socket.py  setup_can_socket.py
